---
source: tests/test_error_scenarios.rs
expression: error_json
---
{
  "actual_value": {
    "status": "invalid"
  },
  "constraints": {
    "required": [
      "name",
      "photoUrls"
    ]
  },
  "expected_type": "object",
  "field_path": "request_body/status",
  "message": "\"invalid\" is not one of [\"available\",\"pending\",\"sold\"]",
  "type": "validation-error"
}
